added img assets to splash page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <main>
             <img src="" alt="name-of-the-game" />
             <div id="dino-button-container">
-                <img class="dinos"></img>
+                <img src='assets/bbDinoCrew.gif' class="left-dinos"></img>
                 <button id="start-button">Start Game</button>
                 <img class="dinos"></img>
             </div>
