added functionality to start game btn on splash page

--- a/index.html
+++ b/index.html
@@ -32,21 +32,13 @@
     </head>
 
     <body>
-        <header class="page-header">
-            <img class="logo" src="/assets/html_css_js.png" alt="logo" />
-            <p class="title">Supabase Web App</p>
-            <nav>
-                <a href="/">Home</a>
-                <a id="sign-out-link" href="auth">Sign Out</a>
-            </nav>
-        </header>
 
         <main>
             <img src="" alt="name-of-the-game" />
             <div id="dino-button-container">
                 <img src='assets/bbDinoCrew.gif' class="left-dinos"></img>
                 <button id="start-button">Start Game</button>
-                <img class="dinos"></img>
+                <img src='assets/bbDinoCrew.gif' class="right-dinos"></img>
             </div>
         </main>
 
