added about us page and link on slpash page

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -7,15 +7,14 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
         <!-- title and favicon -->
-        <title>Supabase Web App</title>
-        <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
+        <title>About Us</title>
 
         <!-- js -->
         <script
             defer
             src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.35.7/dist/umd/supabase.min.js"
         ></script>
-        <script type="module" src="app.js"></script>
+        <!-- <script type="module" src="app.js"></script> -->
 
         <!-- fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,24 +25,12 @@
         />
 
         <!-- css -->
-        <link rel="stylesheet" href="/styles/reset.css" />
-        <link rel="stylesheet" href="/styles/global.css" />
+        <link rel="stylesheet" href="../styles/reset.css" />
+        <link rel="stylesheet" href="../styles/global.css" />
         <!-- add link for page specific css -->
     </head>
 
     <body>
-
-        <main>
-            <img src="" alt="name-of-the-game" />
-            <div id="dino-button-container">
-                <img src='assets/bbDinoCrew.gif' class="left-dinos"></img>
-                <button id="start-button">Start Game</button>
-                <img src='assets/bbDinoCrew.gif' class="right-dinos"></img>
-            </div>
-        </main>
-
-        <footer>
-                <a href="/about-us">About the dinoDevs</a>
-        </footer>
+        <main>About Us</main>
     </body>
 </html>
