--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -27,9 +27,14 @@
         <!-- css -->
         <link rel="stylesheet" href="../styles/reset.css" />
         <link rel="stylesheet" href="../styles/global.css" />
+        <link rel="stylesheet" href="../styles/game.css" />
         <!-- add link for page specific css -->
     </head>
-    <body>
-        <main></main>
+    <body id="game-body">
+        <main>
+            <div id="egg-div">
+                <img id="egg-img" src="../assets/egg-move.gif" />
+            </div>
+        </main>
     </body>
 </html>
