added sign out button, made createDino function

--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -31,6 +31,10 @@
         <!-- add link for page specific css -->
     </head>
     <body id="game-body">
+        <header>
+            <a href="../auth" id="signout-link">Sign out</a>
+        </header>
+
         <main>
             <div id="egg-div">
                 <img id="egg-img" src="../assets/egg-move.gif" />
