colored div backgrounds about-us

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -27,10 +27,14 @@
         <!-- css -->
         <link rel="stylesheet" href="../styles/reset.css" />
         <link rel="stylesheet" href="../styles/global.css" />
+        <link rel="stylesheet" href="../styles/about-us.css" />
         <!-- add link for page specific css -->
     </head>
 
     <body>
-        <main>About Us</main>
+        <div id="div-g">Austin</div>
+        <div id="div-r">Jess</div>
+        <div id="div-y">Grey</div>
+        <div id="div-b">Moni</div>
     </body>
 </html>
