dinodevs title in position

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -36,5 +36,6 @@
         <div id="div-r">Jess</div>
         <div id="div-y">Grey</div>
         <div id="div-b">Moni</div>
+        <div id="dinodivs-title">DINODEVS</div>
     </body>
 </html>
