added dino images

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -37,5 +37,11 @@
         <div id="div-y">Grey</div>
         <div id="div-b">Moni</div>
         <div id="dinodivs-title">DINODEVS</div>
+        <div id="dino-gifs">
+            <img src="../assets/DinoSprite.gif" />
+            <img src="../assets/DinoSprite.gif" />
+            <img src="../assets/DinoSprite.gif" />
+            <img src="../assets/DinoSprite.gif" />
+        </div>
     </body>
 </html>
