--- a/about-us/index.html
+++ b/about-us/index.html
@@ -32,10 +32,10 @@
     </head>
 
     <body>
-        <div id="div-g">Austin</div>
-        <div id="div-r">Jess</div>
-        <div id="div-y">Grey</div>
-        <div id="div-b">Moni</div>
+        <div id="div-g"></div>
+        <div id="div-r"></div>
+        <div id="div-y"></div>
+        <div id="div-b"></div>
         <div id="dinodivs-title">DINODEVS</div>
         <div id="dino-gifs">
             <img src="../assets/DinoSprite.gif" />
@@ -43,5 +43,18 @@
             <img src="../assets/DinoSprite.gif" />
             <img src="../assets/DinoSprite.gif" />
         </div>
+        <div id="name">
+            <h2>Austin</h2>
+            <h2>Jessica</h2>
+            <h2>Grey</h2>
+            <h2>Moni</h2>
+        </div>
+        <div id="title">
+            <h4>Full-Stack Software Engineer</h4>
+            <h4>Full-Stack Software Engineer</h4>
+            <h4>Full-Stack Software Engineer</h4>
+            <h4>Full-Stack Software Engineer</h4>
+        </div>
+        <div id="bio"></div>
     </body>
 </html>
