bio filler text in place

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -55,6 +55,27 @@
             <h4>Full-Stack Software Engineer</h4>
             <h4>Full-Stack Software Engineer</h4>
         </div>
-        <div id="bio"></div>
+        <div id="bio">
+            <p>
+                PeoplesChamp YO PeoplesChamp DID PeoplesChamp HE PeoplesChamp JUST PeoplesChamp WALK
+                PeoplesChamp UP PeoplesChamp SLOWLY PeoplesChamp AND PeoplesChamp DOWNSMASH
+                PeoplesChamp
+            </p>
+            <p>
+                PeoplesChamp YO PeoplesChamp DID PeoplesChamp HE PeoplesChamp JUST PeoplesChamp WALK
+                PeoplesChamp UP PeoplesChamp SLOWLY PeoplesChamp AND PeoplesChamp DOWNSMASH
+                PeoplesChamp
+            </p>
+            <p>
+                PeoplesChamp YO PeoplesChamp DID PeoplesChamp HE PeoplesChamp JUST PeoplesChamp WALK
+                PeoplesChamp UP PeoplesChamp SLOWLY PeoplesChamp AND PeoplesChamp DOWNSMASH
+                PeoplesChamp
+            </p>
+            <p>
+                PeoplesChamp YO PeoplesChamp DID PeoplesChamp HE PeoplesChamp JUST PeoplesChamp WALK
+                PeoplesChamp UP PeoplesChamp SLOWLY PeoplesChamp AND PeoplesChamp DOWNSMASH
+                PeoplesChamp
+            </p>
+        </div>
     </body>
 </html>
