added nameDino func, refactored wet code in game.js, and refactored appropriately in fetch-utils

--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -39,6 +39,7 @@
             <div id="egg-div">
                 <img id="egg-img" src="../assets/egg-move.gif" />
             </div>
+            <div id="dino-name"></div>
         </main>
     </body>
 </html>
