basic layout of about us ffinished!

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -32,10 +32,49 @@
     </head>
 
     <body>
-        <div id="div-g"></div>
-        <div id="div-r"></div>
-        <div id="div-y"></div>
-        <div id="div-b"></div>
+        <div id="div-g">
+            <div class="spacing"></div>
+            <h2>Austin Papritz</h2>
+            <h4>Full-Stack Software Engineer</h4>
+            <p>
+                PeoplesChamp YO PeoplesChamp DID PeoplesChamp HE PeoplesChamp JUST PeoplesChamp WALK
+                PeoplesChamp UP PeoplesChamp SLOWLY PeoplesChamp AND PeoplesChamp DOWNSMASH
+                PeoplesChamp
+            </p>
+        </div>
+        <div id="div-r">
+            <div class="spacing"></div>
+            <h2>Jessica Mosby</h2>
+            <h4>Full-Stack Software Engineer</h4>
+            <p>
+                By the way guys, those aren't earbuds BSJ's using. BSJ has actual power cables
+                connected into his brain to suffice the energy consumption from generating billions
+                of simulation per second to determine the most optimal play in his games of dota 2
+            </p>
+        </div>
+        <div id="div-y">
+            <div class="spacing"></div>
+            <h2>Grey Altaer</h2>
+            <h4>Full-Stack Software Engineer</h4>
+            <p>
+                Ｈｅｌｌｏ Ｉ＇ｍ Ｓｎｉｔｈ， ｐｌａｙｉｎｇ ｍｙ ２０２１４３ｔｈ ｇａｍｅ ｏｎ
+                Ｃｈｅｎ． Ｅｖｅｎ ｔｈｏｕｇｈ ｉｔ＇ｓ ｔｈｅ ｏｎｌｙ ｈｅｒｏ Ｉ ｐｌａｙ Ｉ
+                ｓｔｉｌｌ ｓｕｃｋ ａｔ ｉｔ． Ａｓ ａ ｃｏｍｐｅｎｓａｔｉｏｎ ｆｏｒ ｍｙ
+                ｌａｃｋ ｏｆ ｓｋｉｌｌ Ｉ ａｍ ｇｏｉｎｇ ｔｏ ｂｕｙ ａｌｌ ｓｕｐｐｏｒｔ
+                ｉｔｅｍｓ ａｎｄ ｇａｎｋ ｍｉｄ ａｔ ｌｖｌ ２ ａｎｄ ｆａｉｌ． Ｔｈａｎｋｓ
+                ｆｏｒ ｌｉｓｔｅｎｉｎｇ
+            </p>
+        </div>
+        <div id="div-b">
+            <div class="spacing"></div>
+            <h2>Moni Branum</h2>
+            <h4>Full-Stack Software Engineer</h4>
+            <p>
+                Sodium, atomic number 11, was first isolated by Humphry Davy in 1807. A chemical
+                component of salt, he named it Na in honor of the saltiest region on earth, North
+                America.
+            </p>
+        </div>
         <div id="dinodivs-title">DINODEVS</div>
         <div id="dino-gifs">
             <img src="../assets/DinoSprite.gif" />
@@ -43,39 +82,8 @@
             <img src="../assets/DinoSprite.gif" />
             <img src="../assets/DinoSprite.gif" />
         </div>
-        <div id="name">
-            <h2>Austin</h2>
-            <h2>Jessica</h2>
-            <h2>Grey</h2>
-            <h2>Moni</h2>
-        </div>
-        <div id="title">
-            <h4>Full-Stack Software Engineer</h4>
-            <h4>Full-Stack Software Engineer</h4>
-            <h4>Full-Stack Software Engineer</h4>
-            <h4>Full-Stack Software Engineer</h4>
-        </div>
-        <div id="bio">
-            <p>
-                PeoplesChamp YO PeoplesChamp DID PeoplesChamp HE PeoplesChamp JUST PeoplesChamp WALK
-                PeoplesChamp UP PeoplesChamp SLOWLY PeoplesChamp AND PeoplesChamp DOWNSMASH
-                PeoplesChamp
-            </p>
-            <p>
-                PeoplesChamp YO PeoplesChamp DID PeoplesChamp HE PeoplesChamp JUST PeoplesChamp WALK
-                PeoplesChamp UP PeoplesChamp SLOWLY PeoplesChamp AND PeoplesChamp DOWNSMASH
-                PeoplesChamp
-            </p>
-            <p>
-                PeoplesChamp YO PeoplesChamp DID PeoplesChamp HE PeoplesChamp JUST PeoplesChamp WALK
-                PeoplesChamp UP PeoplesChamp SLOWLY PeoplesChamp AND PeoplesChamp DOWNSMASH
-                PeoplesChamp
-            </p>
-            <p>
-                PeoplesChamp YO PeoplesChamp DID PeoplesChamp HE PeoplesChamp JUST PeoplesChamp WALK
-                PeoplesChamp UP PeoplesChamp SLOWLY PeoplesChamp AND PeoplesChamp DOWNSMASH
-                PeoplesChamp
-            </p>
-        </div>
+        <!-- <div id="name"></div>
+        <div id="title"></div>
+        <div id="bio"></div> -->
     </body>
 </html>
