refactored eggImg, displayDino, and add grabUserFunc funcs in game.js

--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -37,7 +37,7 @@
 
         <main>
             <div id="egg-div">
-                <img id="egg-img" src="../assets/egg-move.gif" />
+                <img id="egg-img" src="" />
             </div>
             <div id="dino-name"></div>
         </main>
