added sign out link to all pages

--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -32,7 +32,7 @@
     </head>
     <body id="game-body">
         <header>
-            <a href="../auth" id="signout-link">Sign out</a>
+            <a href="../auth/index.html" id="sign-out-link">Sign out</a>
         </header>
 
         <main>
