--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     </head>
 
     <body>
-
+        <header>
+            <a href="../auth/index.html" id="sign-out-link">Sign out</a>
+        </header>
         <main>
             <img src="" alt="name-of-the-game" />
             <div id="dino-button-container">
