--- a/about-us/index.html
+++ b/about-us/index.html
@@ -28,10 +28,16 @@
         <link rel="stylesheet" href="../styles/reset.css" />
         <link rel="stylesheet" href="../styles/global.css" />
         <link rel="stylesheet" href="../styles/about-us.css" />
+        <link rel="stylesheet" href="../styles/nav.css" />
         <!-- add link for page specific css -->
     </head>
 
     <body>
+        <header id="header">
+            <nav>
+                <a href="../auth" id="sign-out-link">Sign out</a>
+            </nav>
+        </header>
         <div id="div-g">
             <div class="spacing"></div>
             <h2>Austin Papritz</h2>
