--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- add link for page specific css -->
     </head>
 
-    <body>
+    <body class="splash-page-body">
         <header>
             <a href="../auth/index.html" id="sign-out-link">Sign out</a>
         </header>
