--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -28,6 +28,7 @@
         <link rel="stylesheet" href="../styles/reset.css" />
         <link rel="stylesheet" href="../styles/global.css" />
         <link rel="stylesheet" href="../styles/game.css" />
+        <link rel="stylesheet" href="../styles/sprites.css" />
         <!-- add link for page specific css -->
     </head>
     <body id="game-body">
@@ -36,8 +37,9 @@
         </header>
 
         <main>
+            <div id="test"></div>
             <div id="egg-div">
-                <img id="egg-img" src="" />
+                <div id="egg-img"></div>
             </div>
             <div id="dino-name"></div>
         </main>
