added home link on game and about us pages

--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -33,6 +33,7 @@
     </head>
     <header>
         <a href="../auth/index.html" id="sign-out-link">Sign out</a>
+        <a href="/index.html" id="home">Home</a>
     </header>
     <body id="game-body">
         <main>
