--- a/about-us/index.html
+++ b/about-us/index.html
@@ -36,6 +36,7 @@
         <header id="header">
             <nav>
                 <a href="../auth" id="sign-out-link">Sign out</a>
+                <a href="/index.html" id="home">Home</a>
             </nav>
         </header>
         <div id="div-g">
