added dino name styling and placement above dino head

--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -17,6 +17,7 @@
         <script type="module" src="game.js"></script>
 
         <!-- fonts -->
+        <link href="https://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -38,9 +39,9 @@
         <main>
             <div id="test"></div>
             <div id="egg-div">
+                <div id="dino-name"></div>
                 <div id="egg-img"></div>
             </div>
-            <div id="dino-name"></div>
         </main>
     </body>
 </html>
