--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -32,8 +32,10 @@
         <!-- add link for page specific css -->
     </head>
     <header>
-        <a href="../auth/index.html" id="sign-out-link">Sign out</a>
-        <a href="/index.html" id="home">Home</a>
+        <nav>
+            <a href="../auth/index.html" id="sign-out-link">Sign out</a>
+            <a href="/index.html" id="home">Home</a>
+        </nav>
     </header>
     <body id="game-body">
         <main>
