music plays onclick for auth page

--- a/auth/index.html
+++ b/auth/index.html
@@ -27,6 +27,7 @@
 
     <body id="auth-body">
         <main>
+            <audio id="auth-track" src="../assets/Audio/authpage.mp3" loop="loop"></audio>
             <form id="auth-form">
                 <h2></h2>
                 <label id="sign-in-form">
