dinos are well spaced and animated sprites

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -29,6 +29,7 @@
         <link rel="stylesheet" href="../styles/global.css" />
         <link rel="stylesheet" href="../styles/about-us.css" />
         <link rel="stylesheet" href="../styles/nav.css" />
+        <link rel="stylesheet" href="../styles/sprites.css" />
         <!-- add link for page specific css -->
     </head>
 
@@ -83,13 +84,10 @@
         </div>
         <div id="dinodivs-title">DINODEVS</div>
         <div id="dino-gifs">
-            <img src="../assets/DinoSprite.gif" />
-            <img src="../assets/DinoSprite.gif" />
-            <img src="../assets/DinoSprite.gif" />
-            <img src="../assets/DinoSprite.gif" />
+            <div class="austin-sprite"></div>
+            <div class="jess-sprite"></div>
+            <div class="grey-sprite"></div>
+            <div class="moni-sprite"></div>
         </div>
-        <!-- <div id="name"></div>
-        <div id="title"></div>
-        <div id="bio"></div> -->
     </body>
 </html>
