added music to game pages

--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -37,6 +37,7 @@
     </header>
     <body id="game-body">
         <main>
+            <audio id="game-track" src="../assets/Audio/splashgametune.mp3" loop="loop"></audio>
             <div id="test"></div>
             <div id="egg-div">
                 <div id="dino-name"></div>
