added cursor and tweaked some css

--- a/auth/index.html
+++ b/auth/index.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="/styles/reset.css" />
         <link rel="stylesheet" href="/styles/global.css" />
         <link rel="stylesheet" href="/styles/form.css" />
-        <title>Auth</title>
+        <title>Auth for Dinogatchi</title>
     </head>
 
     <body id="auth-body">
