--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
         <!-- title and favicon -->
-        <title>Supabase Web App</title>
+        <title>Dinogatchi</title>
         <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
 
         <!-- js -->
@@ -37,10 +37,12 @@
             <a href="../auth/index.html" id="sign-out-link">Sign out</a>
         </header>
         <main>
-            <img src="" alt="name-of-the-game" />
+            <img src="../assets/dinogatchiTitle.png" alt="Dinogatchi" />
             <div id="dino-button-container">
                 <img src='assets/bbDinoCrew.gif' class="left-dinos"></img>
-                <button id="start-button">Start Game</button>
+                <button id="start-button">
+                    <img src="../assets/start.png"/>
+                </button>
                 <img src='assets/bbDinoCrew.gif' class="right-dinos"></img>
             </div>
         </main>
