--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
         <!-- title and favicon -->
-        <title>Dino Game</title>
+        <title>Dinogatchi</title>
 
         <!-- js -->
         <script
