--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -38,6 +38,10 @@
     <body id="game-body">
         <main>
             <audio id="game-track" src="../assets/Audio/splashgametune.mp3" loop="loop"></audio>
+            <audio src="../assets/Audio/crack.mp3" id="crack-audio"></audio>
+            <audio src="../assets/Audio/hatch.mp3" id="hatch-audio"></audio>
+            <audio src="../assets/Audio/outofshell.mp3" id="out-shell-audio"></audio>
+            <audio src="../assets/Audio/chompedit.mp3" id="chomp-audio"></audio>
             <div id="test"></div>
             <div id="egg-div">
                 <div id="dino-name"></div>
