added jump audio to dino-game/index.html

--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -42,6 +42,7 @@
             <audio src="../assets/Audio/hatch.mp3" id="hatch-audio"></audio>
             <audio src="../assets/Audio/outofshell.mp3" id="out-shell-audio"></audio>
             <audio src="../assets/Audio/chompedit.mp3" id="chomp-audio"></audio>
+            <audio src="../assets/Audio/jump.mp3" id="jump-audio"></audio>
             <div id="test"></div>
             <div id="egg-div">
                 <div id="dino-name"></div>
