audio plays on load for auth splash and game

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <a href="../auth/index.html" id="sign-out-link">Sign out</a>
         </header>
         <main>
+            <audio id="game-track" src="../assets/Audio/splashgametune.mp3" loop="loop"></audio>
             <img src="../assets/dinogatchiTitle.png" alt="Dinogatchi" />
             <div id="dino-button-container">
                 <div class="left-dinos austin-sprite"></div>
