added my bio and changed font color to black for page

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -55,9 +55,9 @@
             <h2>Jessica Mosby</h2>
             <h4>Full-Stack Software Engineer</h4>
             <p>
-                By the way guys, those aren't earbuds BSJ's using. BSJ has actual power cables
-                connected into his brain to suffice the energy consumption from generating billions
-                of simulation per second to determine the most optimal play in his games of dota 2
+                Chocolate milk connoisseur, idea generator, problem solver, purple dinosaur. “I'm so
+                clever that sometimes I don't understand a single word of what I am saying.” Oscar
+                Wilde
             </p>
         </div>
         <div id="div-y">
