fixed syntax error

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -56,7 +56,7 @@
             <h4>Full-Stack Software Engineer</h4>
             <p>
                 Chocolate milk connoisseur, idea generator, problem solver, purple dinosaur. “I'm so
-                clever that sometimes I don't understand a single word of what I am saying.” Oscar
+                clever that sometimes I don't understand a single word of what I am saying.” -Oscar
                 Wilde
             </p>
         </div>
