--- a/about-us/index.html
+++ b/about-us/index.html
@@ -55,8 +55,8 @@
             <h2>Jessica Mosby</h2>
             <h4>Full-Stack Software Engineer</h4>
             <p>
-                Chocolate milk connoisseur, idea generator, problem solver, purple dinosaur. “I'm so
-                clever that sometimes I don't understand a single word of what I am saying.” -Oscar
+                Purple dinosaur, chocolate milk connoisseur, idea generator, problem solver. “I'm so
+                clever that sometimes I don't understand a single word of what I'm saying.” -Oscar
                 Wilde
             </p>
         </div>
