--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -41,10 +41,11 @@
     <body id="game-body">
         <main>
             <audio id="game-track" src="../assets/Audio/splashgametune.mp3" loop="loop"></audio>
+            <audio src="../assets/Audio/shake.mp3" id="shake-audio"></audio>
             <audio src="../assets/Audio/crack.mp3" id="crack-audio"></audio>
             <audio src="../assets/Audio/hatch.mp3" id="hatch-audio"></audio>
             <audio src="../assets/Audio/outofshell.mp3" id="out-shell-audio"></audio>
-            <audio src="../assets/Audio/chompedit.mp3" id="chomp-audio"></audio>
+            <audio src="../assets/Audio/chomp.mp3" id="chomp-audio"></audio>
             <audio src="../assets/Audio/jump.mp3" id="jump-audio"></audio>
             <div id="test"></div>
             <div id="egg-div">
