added action buttons to html; added DOM grabs to game.js

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -55,9 +55,9 @@
             <h2>Jessica Mosby</h2>
             <h4>Full-Stack Software Engineer</h4>
             <p>
-                Purple dinosaur, chocolate milk connoisseur, idea generator, problem solver. “I'm so
-                clever that sometimes I don't understand a single word of what I'm saying.” -Oscar
-                Wilde
+                Purple dinosaur, chocolate milk connoisseur, idea generator, problem solver.
+                Straight from the fridge. “I'm so clever that sometimes I don't understand a single
+                word of what I'm saying.” -Oscar Wilde
             </p>
         </div>
         <div id="div-y">
