--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -47,7 +47,10 @@
             <audio src="../assets/Audio/outofshell.mp3" id="out-shell-audio"></audio>
             <audio src="../assets/Audio/chomp.mp3" id="chomp-audio"></audio>
             <audio src="../assets/Audio/jump.mp3" id="jump-audio"></audio>
-            <div id="test"></div>
+            <div id="action-buttons-container">
+                <button id="feed-button">Feed your Dino!</button>
+                <button id="ex-button">Exercise your Dino!</button>
+            </div>
             <div id="egg-div">
                 <div id="dino-name"></div>
                 <div id="egg-img"></div>
