added button styling in game.css

--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -48,8 +48,8 @@
             <audio src="../assets/Audio/chomp.mp3" id="chomp-audio"></audio>
             <audio src="../assets/Audio/jump.mp3" id="jump-audio"></audio>
             <div id="action-buttons-container">
-                <button id="feed-button">Feed your Dino!</button>
-                <button id="ex-button">Exercise your Dino!</button>
+                <button class="game-button" id="feed-button">Feed your Dino!</button>
+                <button class="game-button" id="ex-button">Exercise your Dino!</button>
             </div>
             <div id="egg-div">
                 <div id="dino-name"></div>
