completed all team bios

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -44,16 +44,19 @@
             <div class="spacing"></div>
             <h2>Austin Papritz</h2>
             <h4>Full-Stack Software Engineer</h4>
+            <h5>Animation Wizard</h5>
             <p>
-                PeoplesChamp YO PeoplesChamp DID PeoplesChamp HE PeoplesChamp JUST PeoplesChamp WALK
-                PeoplesChamp UP PeoplesChamp SLOWLY PeoplesChamp AND PeoplesChamp DOWNSMASH
-                PeoplesChamp
+                Austin fights for his friends. Championer of the app. Captain Falcon main. Hades
+                punished him for cheating death twice by forcing him to roll an immense boulder up a
+                mountain only for it to roll down every time it neared the top, repeating this
+                action for eternity.
             </p>
         </div>
         <div id="div-r">
             <div class="spacing"></div>
             <h2>Jessica Mosby</h2>
             <h4>Full-Stack Software Engineer</h4>
+            <h5>Dinosaur Evangelist</h5>
             <p>
                 Purple dinosaur, chocolate milk connoisseur, idea generator, problem solver.
                 Straight from the fridge. “I'm so clever that sometimes I don't understand a single
@@ -64,23 +67,23 @@
             <div class="spacing"></div>
             <h2>Grey Altaer</h2>
             <h4>Full-Stack Software Engineer</h4>
+            <h5>Audio Sorceress</h5>
             <p>
-                Ｈｅｌｌｏ Ｉ＇ｍ Ｓｎｉｔｈ， ｐｌａｙｉｎｇ ｍｙ ２０２１４３ｔｈ ｇａｍｅ ｏｎ
-                Ｃｈｅｎ． Ｅｖｅｎ ｔｈｏｕｇｈ ｉｔ＇ｓ ｔｈｅ ｏｎｌｙ ｈｅｒｏ Ｉ ｐｌａｙ Ｉ
-                ｓｔｉｌｌ ｓｕｃｋ ａｔ ｉｔ． Ａｓ ａ ｃｏｍｐｅｎｓａｔｉｏｎ ｆｏｒ ｍｙ
-                ｌａｃｋ ｏｆ ｓｋｉｌｌ Ｉ ａｍ ｇｏｉｎｇ ｔｏ ｂｕｙ ａｌｌ ｓｕｐｐｏｒｔ
-                ｉｔｅｍｓ ａｎｄ ｇａｎｋ ｍｉｄ ａｔ ｌｖｌ ２ ａｎｄ ｆａｉｌ． Ｔｈａｎｋｓ
-                ｆｏｒ ｌｉｓｔｅｎｉｎｇ
+                Grey loves weird noises, pasta, and the North African Least Weasel. They run cold in
+                the summer, and hot in the winter. They also love robots.
             </p>
         </div>
         <div id="div-b">
             <div class="spacing"></div>
             <h2>Moni Branum</h2>
             <h4>Full-Stack Software Engineer</h4>
+            <h5>One woman art department</h5>
             <p>
-                Sodium, atomic number 11, was first isolated by Humphry Davy in 1807. A chemical
-                component of salt, he named it Na in honor of the saltiest region on earth, North
-                America.
+                Vectorsmith. Data-bender. Vibe-crafter. Team Dinogatchi's Secret Weapon. Loves
+                anime, video games, classical piano and four-legged friends.
+                <p>"君がいると 何も言えない 僕がいた 君がいれば 何でもやれる 僕がいた" - We'll Be
+                Alright</p>
+                <!-- Hope this is ok, Moni! We love you! -->
             </p>
         </div>
         <div id="dinodivs-title">DINODEVS</div>
