corrections and bug fixes

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -79,7 +79,7 @@
             <h4>Full-Stack Software Engineer</h4>
             <h5>One woman art department</h5>
             <p>
-                Vectorsmith. Data-bender. Vibe-crafter. Team Dinogatchi's Secret Weapon. Loves
+                Vectorsmith. Data-bender. Vibe-crafter. Team DINODEVS' Secret Weapon. Loves
                 anime, video games, classical piano and four-legged friends.
                 <p>"君がいると 何も言えない 僕がいた 君がいれば 何でもやれる 僕がいた" - We'll Be
                 Alright</p>
