apple showing, css formatting messed up though

--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -53,7 +53,10 @@
             </div>
             <div id="egg-div">
                 <div id="dino-name"></div>
-                <div id="egg-img"></div>
+                <div id="dino-interaction">
+                    <div id="egg-img"></div>
+                    <div id="dino-item"></div>
+                </div>
             </div>
         </main>
     </body>
