fruits there but in front of dino

--- a/dino-game/index.html
+++ b/dino-game/index.html
@@ -54,8 +54,7 @@
             <div id="egg-div">
                 <div id="dino-name"></div>
                 <div id="dino-interaction">
-                    <div id="egg-img"></div>
-                    <div id="dino-item"></div>
+                    <div id="egg-img"><div id="dino-item"></div></div>
                 </div>
             </div>
         </main>
